Project goinggoing {
  database_type: "MySQL"
  Note: "GoingGoing MVP schema for MariaDB. Main destination content, card carousel, saved routes, bookmarks, preferences, and Korea Tourism Organization public-data imports."
}

Enum user_role {
  USER
  ADMIN
}

Enum user_status {
  ACTIVE
  SUSPENDED
  DELETED
}

Enum content_type {
  ATTRACTION
  RESTAURANT
  CAFE
  ACCOMMODATION
  FESTIVAL
  SHOPPING
  ETC
}

Enum trip_duration_type {
  DAY_TRIP
  ONE_NIGHT_TWO_DAYS
}

Enum source_type {
  KTO_TOUR_API
  KTO_RELATED_ATTRACTION
  KTO_REGIONAL_DEMAND
  ADMIN
}

Enum route_status {
  DRAFT
  PUBLISHED
  HIDDEN
}

Enum sync_status {
  SUCCESS
  FAILED
  PARTIAL
}

Table users {
  id bigint [pk, increment]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  nickname varchar(50) [not null]
  role user_role [not null, default: 'USER']
  status user_status [not null, default: 'ACTIVE']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table refresh_tokens {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  token varchar(512) [not null, unique]
  expires_at timestamp [not null]
  revoked_at timestamp
  created_at timestamp [not null]

  Indexes {
    user_id
    expires_at
  }
}

Table regions {
  id bigint [pk, increment]
  parent_id bigint [ref: > regions.id]
  area_code varchar(20)
  sigungu_code varchar(20)
  name varchar(100) [not null]
  full_name varchar(200) [not null]
  display_order int [not null, default: 0]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    parent_id
    (area_code, sigungu_code) [unique]
  }
}

Table themes {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  description varchar(255)
  display_order int [not null, default: 0]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table sub_themes {
  id bigint [pk, increment]
  theme_id bigint [not null, ref: > themes.id]
  name varchar(100) [not null]
  description varchar(255)
  display_order int [not null, default: 0]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (theme_id, name) [unique]
  }
}

Table tags {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  display_order int [not null, default: 0]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table contents {
  id bigint [pk, increment]
  region_id bigint [not null, ref: > regions.id]
  theme_id bigint [ref: > themes.id]
  sub_theme_id bigint [ref: > sub_themes.id]
  title varchar(200) [not null]
  content_type content_type [not null]
  summary varchar(500)
  description text
  address varchar(500)
  latitude decimal(10, 7)
  longitude decimal(10, 7)
  thumbnail_url varchar(1000)
  source_type source_type [not null]
  external_content_id varchar(100)
  external_content_type_id varchar(50)
  external_area_code varchar(50)
  external_sigungu_code varchar(50)
  view_count bigint [not null, default: 0]
  bookmark_count bigint [not null, default: 0]
  hot_score decimal(10, 2) [not null, default: 0]
  is_published boolean [not null, default: false]
  synced_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Indexes {
    region_id
    theme_id
    sub_theme_id
    content_type
    hot_score
    is_published
    (source_type, external_content_id) [unique]
  }
}

Table content_cards {
  id bigint [pk, increment]
  content_id bigint [not null, ref: > contents.id]
  title varchar(200) [not null]
  body text [not null]
  image_url varchar(1000)
  display_order int [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    content_id
    (content_id, display_order) [unique]
  }
}

Table content_tags {
  content_id bigint [not null, ref: > contents.id]
  tag_id bigint [not null, ref: > tags.id]

  Indexes {
    (content_id, tag_id) [pk]
    tag_id
  }
}

Table user_preferences {
  id bigint [pk, increment]
  user_id bigint [not null, unique, ref: > users.id]
  preferred_trip_duration trip_duration_type
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table user_preference_regions {
  user_preference_id bigint [not null, ref: > user_preferences.id]
  region_id bigint [not null, ref: > regions.id]

  Indexes {
    (user_preference_id, region_id) [pk]
    region_id
  }
}

Table user_preference_themes {
  user_preference_id bigint [not null, ref: > user_preferences.id]
  theme_id bigint [not null, ref: > themes.id]

  Indexes {
    (user_preference_id, theme_id) [pk]
    theme_id
  }
}

Table user_preference_tags {
  user_preference_id bigint [not null, ref: > user_preferences.id]
  tag_id bigint [not null, ref: > tags.id]

  Indexes {
    (user_preference_id, tag_id) [pk]
    tag_id
  }
}

Table bookmarks {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  content_id bigint [not null, ref: > contents.id]
  created_at timestamp [not null]

  Indexes {
    user_id
    content_id
    (user_id, content_id) [unique]
  }
}

Table routes {
  id bigint [pk, increment]
  content_id bigint [not null, ref: > contents.id]
  theme_id bigint [ref: > themes.id]
  title varchar(200) [not null]
  summary varchar(500)
  trip_duration_type trip_duration_type [not null]
  status route_status [not null, default: 'DRAFT']
  total_distance_meters int
  total_duration_minutes int
  map_center_latitude decimal(10, 7)
  map_center_longitude decimal(10, 7)
  created_by varchar(100)
  created_at timestamp [not null]
  updated_at timestamp [not null]
  published_at timestamp

  Indexes {
    content_id
    theme_id
    trip_duration_type
    status
  }
}

Table route_places {
  id bigint [pk, increment]
  route_id bigint [not null, ref: > routes.id]
  content_id bigint [ref: > contents.id]
  name varchar(200) [not null]
  place_type content_type [not null]
  address varchar(500)
  latitude decimal(10, 7)
  longitude decimal(10, 7)
  day_number int [not null, default: 1]
  visit_order int [not null]
  estimated_stay_minutes int
  move_minutes_from_previous int
  recommendation_note varchar(500)
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    route_id
    content_id
    (route_id, day_number, visit_order) [unique]
  }
}

Table related_places {
  id bigint [pk, increment]
  base_content_id bigint [not null, ref: > contents.id]
  related_content_id bigint [ref: > contents.id]
  name varchar(200) [not null]
  place_type content_type [not null]
  related_rank int [not null]
  relation_score decimal(10, 2)
  address varchar(500)
  latitude decimal(10, 7)
  longitude decimal(10, 7)
  source_period varchar(20)
  raw_payload json
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    base_content_id
    related_content_id
    (base_content_id, place_type, related_rank)
  }
}

Table regional_demand_metrics {
  id bigint [pk, increment]
  region_id bigint [not null, ref: > regions.id]
  metric_month varchar(7) [not null]
  service_demand_score decimal(10, 2)
  cultural_resource_score decimal(10, 2)
  navigation_search_score decimal(10, 2)
  raw_payload json
  created_at timestamp [not null]

  Indexes {
    region_id
    (region_id, metric_month) [unique]
  }
}

Table search_logs {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  keyword varchar(200) [not null]
  result_count int [not null, default: 0]
  created_at timestamp [not null]

  Indexes {
    user_id
    keyword
    created_at
  }
}

Table external_sync_logs {
  id bigint [pk, increment]
  source_type source_type [not null]
  endpoint varchar(255) [not null]
  status sync_status [not null]
  requested_at timestamp [not null]
  completed_at timestamp
  imported_count int [not null, default: 0]
  failed_count int [not null, default: 0]
  message text
}
